--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body, html {
   text-align: center;
   font-family: Gotham, Helvetica, Arial, sans-serif;
   font-size: 1em;
+  color: #ff8641;
 }
 
 section {
@@ -10,9 +11,50 @@ section {
 }
 
 h1 {
+  color: #7b7d70;
   font-size: 2em;
 }
 
 h2 {
   font-size: 1.5em;
+  color: #4eafb8;
+}
+
+/***** TABLET *****/
+
+@media (min-width: 768px) {
+ h1 {
+   color: #02cbd2;
+ }
+
+ h2 {
+   color: #fcc02a;
+ }
+
+ body, html { 
+   color: #7b8f8e;
+
+ }
+  
+}
+
+/***** DESKTOP *****/
+
+@media (min-width: 1200px) {
+  h1 {
+    color: #6e4b61;
+  }
+
+  h2 {
+    color: #cabd61;
+  }
+
+  h3 {
+    color: #c19e74 ;
+  }
+
+  body, html {
+    color: #c19e74;
+  }
+   
 }
